--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -2,4 +2,43 @@
     width: 192px;
     height: 84px;
 }
+.item-block {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: block;
+}
+.item-title {
+    color: #fff;
+    font-size: 16px;
+    padding: 0 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.item-p {
+    color: #fff;
+    text-align: center;
+}
+
+.item-btn {
+    margin-top: 15px;
+    width: 90px;
+    height: 26px;
+    line-height: 26px;
+    cursor: pointer;
+
+}
+.btn-a {
+    display: inline-block;
+    border: none;
+    padding: 0;
+    background-color: #3CA7FC;
+    color: #fff;
+    box-sizing: border-box;
+    text-align: center;
+}
+
 
