--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -1,7 +1,21 @@
+/**
+ * 首页logo样式
+ */
 #home-logo {
     width: 192px;
     height: 84px;
 }
+/**
+ * 轮播图样式
+ */
+.my-img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+/**
+ * 首页网站建设部分样式
+ */
 .item-block {
     position: absolute;
     left: 0;
@@ -9,7 +23,8 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    display: block;
+    display: none;
+    margin-top: -60px;
 }
 .item-title {
     color: #fff;
@@ -39,6 +54,21 @@
     color: #fff;
     box-sizing: border-box;
     text-align: center;
+}
+
+.my-btn {
+    background: #105AE4;
+    padding: 11px 31px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: #fff;
+    border-radius: 59px;
+    display: inline-block;
+    box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
+    -o-box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
+    -ms-box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
 }
 
 
