--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -14,7 +14,91 @@
 }
 
 /**
- * 首页网站建设部分样式
+ * 首页网站建设类型展示样式
+ */
+.website-a {
+    margin-left: 35px;
+}
+.items {
+    padding: 60px 0;
+    height: auto;
+    text-align: center;
+}
+
+.item {
+    box-sizing: border-box;
+    width: 224px;
+    height: 360px;
+    border: 1px solid #eee;
+    position: relative;
+}
+
+
+.img-block {
+    margin: 30px auto;
+    height: 66px;
+    position: relative;
+}
+
+.img-a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+}
+
+.img-b {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.items-title {
+    font-size: 20px;
+    text-align: center;
+    color: #0d0d0d;
+}
+
+.items-p {
+    color: #999;
+    text-align: center;
+    line-height: 8px;
+}
+
+.wentuo-item-btn {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;
+    text-decoration: underline;
+}
+
+.item:hover {
+    box-shadow: 0 0 3px 2px rgba(0, 162, 255, 0.4);
+    border-color: #00a2ff;
+}
+
+.item:hover .img-a {
+    opacity: 0.5;
+}
+
+.item:hover .img-b {
+    opacity: 1;
+}
+
+ .item:hover .items-title {
+    color: #00a2ff;
+}
+
+.item:hover .wentuo-item-btn {
+    color: #00a2ff;
+}
+
+/**
+ * 首页案例展示部分样式
  */
 .item-block {
     position: absolute;
@@ -25,6 +109,7 @@
     text-align: center;
     display: none;
     margin-top: -60px;
+
 }
 .item-title {
     color: #fff;
@@ -32,6 +117,7 @@
     padding: 0 20px;
     text-align: center;
     margin-bottom: 10px;
+    margin-top: 20px;
 }
 .item-p {
     color: #fff;
@@ -57,6 +143,7 @@
 }
 
 .my-btn {
+    margin-top: 15px;
     background: #105AE4;
     padding: 11px 31px;
     font-size: 14px;
