--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -12,6 +12,10 @@
     max-width: 100%;
     height: auto;
 }
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
 
 /**
  * 首页网站建设类型展示样式
