网站建设相关页面编写 19-05-05

--- a/www.iwntuo.com/v1.0/css/aos-animation.css
+++ b/www.iwntuo.com/v1.0/css/aos-animation.css
@@ -242,7 +242,8 @@ a {
 .section {
   width: 100%;
   float: left;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .section-title {
   text-align: center;
