--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -93,7 +93,7 @@
     opacity: 1;
 }
 
- .item:hover .items-title {
+.item:hover .items-title {
     color: #00a2ff;
 }
 
@@ -104,7 +104,7 @@
 /**
  * 首页案例展示部分样式
  */
-.item-block {
+.item-img-block {
     position: absolute;
     left: 0;
     top: 0;
@@ -163,6 +163,9 @@
 }
 
 
+/**
+ * 宣传海报部分样式
+ */
 #siwei-row {
     margin-right: -390px;
     margin-left: -338px;
@@ -178,7 +181,7 @@
 }
 
 .conduct-animate {
-    -webkit-animation:mymove 1s infinite; /*Safari and Chrome*/
+    -webkit-animation:mymove 1.5s infinite; /*Safari and Chrome*/
     animation-iteration-count: 1; /*规定循环播放次数，否则一直会循环下去*/
     -webkit-animation-fill-mode: forwards; /* 设置动画完成定格到最后一帧，不设置播放完恢复原来的位置*/
     animation-fill-mode: forwards;
@@ -198,4 +201,185 @@
 #pinzhi{
     background: #495057;
 }
+
+/**
+ * 品牌型网站页面样式部分
+ */
+#pinpai-img-div {
+    background-image: url("../images/home/website/pinpai-banner.png");
+    width: 100%;
+    height: 619px;
+}
+.main-warp {
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    min-width: 1200px;
+}
+.main-banner-content {
+    color: #fff;
+    height: 549px;
+}
+.main-banner-title {
+    font-weight: bold;
+}
+.main-banner-desc {
+    margin-top: 15px;
+}
+.main-banner-btns {
+    line-height: 44px;
+    font-size: 18px;
+    margin-top: 20px;
+}
+.btn-b-light {
+    width: 175px;
+    height: 46px;
+    display: inline-block;
+    padding: 0;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+    box-sizing: border-box;
+    text-align: center;
+}
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.items-1 {
+    width: 40%;
+    text-align: center;
+    float: left;
+    box-sizing: border-box;
+
+}
+
+.items-r {
+   float: right;
+    margin-right: 10%;
+}
+.adverse-title {
+    font-size: 36px;
+    line-height: 96px;
+    text-align: left;
+    margin-bottom: 0;
+    vertical-align: middle;
+    color: #0d0d0d;
+}
+.adverse-content {
+    font-size: 14px;
+    line-height: 24px;
+    color: #999;
+    text-align: left;
+    margin-bottom: 0;
+    display: -webkit-box
+
+}
+.adverse-gray-title {
+    font-size: 36px;
+    line-height: 96px;
+    text-align: left;
+    margin-bottom: 0;
+    color: #0d0d0d;
+    margin-left: 30%;
+}
+.adverse-gray-content {
+    font-size: 14px;
+    line-height: 24px;
+    color: #999;
+    text-align: left;
+    margin-bottom: 0;
+    margin-left: 30%;
+}
+.gray-bg {
+    background: #f9f9f9;
+}
+
+.items-more-title {
+    text-align: center;
+}
+.more-service-title:before {
+    content: "";
+    display: inline-block;
+    width: 140px;
+    border-bottom: 1px solid #ccc;
+    vertical-align: middle;
+    margin-right: 20px;
+}
+.more-service-title:after {
+    content: "";
+    display: inline-block;
+    width: 140px;
+    border-bottom: 1px solid #ccc;
+    vertical-align: middle;
+    margin-left: 20px;
+}
+.items-more-title p {
+    font-size: 30px;
+    color: #000000;
+}
+.items-more-title .more-service-title-p {
+    font-size: 15px;
+    color: #495057;
+}
+.main-warp .section-header {
+    position: relative;
+    height: 62px;
+    padding: 0 0 0 13px;
+    margin: 0 0 20px;
+    line-height: 62px;
+    font-size: 24px;
+}
+.section-header .section-title {
+    float: left;
+    padding: 0 0;
+    color: #0d0d0d;
+}
+.clearfix:before, .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.marketing-list li {
+    position: relative;
+    float: left;
+    width: 20%;
+    height: 278px;
+    padding: 40px 20px 0;
+    margin: 0 0 0 -1px;
+    overflow: hidden;
+    border: 1px solid #e5e5e5;
+    text-align: center;
+    background: #fff;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+.marketing-list .marketing-1:hover .pic {
+    background: url("../images/home/website/marketing-icons-1-hover.png") top center no-repeat;
+    height: 71px;
+}
+.marketing-list li .pic-line {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 4px;
+    background: #3CA7FC;
+    transform: translateX(-100%);
+}
+
+.marketing-list .items-title {
+    padding: 17px 0;
+}
+.marketing-1 .pic {
+    background: url("../images/home/website/marketing-icons-1.png") top center no-repeat;
+    height: 71px;
+}
+
+
 
