--- a/www.iwntuo.com/v1.0/css/style.css
+++ b/www.iwntuo.com/v1.0/css/style.css
@@ -261,7 +261,8 @@ h3.tittle {
 
 .sub-tittle {
     font-size: 0.4em;
-    color: #FC427B;
+    /*color: #FC427B;*/
+    color: #495057;
     font-weight: 700;
     letter-spacing: 2px;
     display: block;
