--- a/www.iwntuo.com/v1.0/css/my-style.css
+++ b/www.iwntuo.com/v1.0/css/my-style.css
@@ -1,4 +1,67 @@
 /**
+ * 公共的样式
+ */
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
+.w_1200 {
+    width: 1200px;
+    margin: 0 auto;
+}
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    font-family: "Microsoft YaHei",sans-serif;
+    color: #333;
+}
+.items {
+    margin: 0 auto;
+    width: 78%;
+    padding: 60px 0;
+    height: auto;
+    text-align: center;
+}
+.items-full {
+    margin: 0 auto;
+    width: 100%;
+    padding: 60px 0;
+    height: auto;
+    text-align: center;
+}
+.items a {
+    margin: 0 auto;
+}
+.item {
+    box-sizing: border-box;
+    width: 224px;
+    height: 360px;
+    border: 1px solid #eee;
+    position: relative;
+}
+.items-title {
+    font-size: 20px;
+    text-align: center;
+    color: #0d0d0d;
+}
+
+.items-p {
+    color: #999;
+    text-align: center;
+    line-height: 8px;
+}
+.item:hover {
+    box-shadow: 0 0 3px 2px rgba(0, 162, 255, 0.4);
+    border-color: #00a2ff;
+}
+.gray-bg {
+    background: #f9f9f9;
+}
+/**
  * 首页logo样式
  */
 #home-logo {
@@ -20,34 +83,11 @@
 /**
  * 首页网站建设类型展示样式
  */
-.website-a {
-    margin-left: 0px;
-}
-.items {
-    margin: 0 auto;
-    width: 78%;
-    padding: 60px 0;
-    height: auto;
-    text-align: center;
-}
-.items a {
-    margin: 0 auto;
-}
-.item {
-    box-sizing: border-box;
-    width: 224px;
-    height: 360px;
-    border: 1px solid #eee;
-    position: relative;
-}
-
-
 .img-block {
     margin: 30px auto;
     height: 66px;
     position: relative;
 }
-
 .img-a {
     position: absolute;
     top: 50%;
@@ -55,7 +95,6 @@
     transform: translate(-50%, -50%);
     opacity: 1;
 }
-
 .img-b {
     opacity: 0;
     position: absolute;
@@ -63,19 +102,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
-.items-title {
-    font-size: 20px;
-    text-align: center;
-    color: #0d0d0d;
-}
-
-.items-p {
-    color: #999;
-    text-align: center;
-    line-height: 8px;
-}
-
 .wentuo-item-btn {
     position: absolute;
     left: 50%;
@@ -84,10 +110,7 @@
     text-decoration: underline;
 }
 
-.item:hover {
-    box-shadow: 0 0 3px 2px rgba(0, 162, 255, 0.4);
-    border-color: #00a2ff;
-}
+
 
 .item:hover .img-a {
     opacity: 0.5;
@@ -165,9 +188,8 @@
     -moz-box-shadow: 0 12px 60px rgba(0, 0, 0, .2);
 }
 
-
 /**
- * 宣传海报部分样式
+ * 首页宣传海报部分样式
  */
 #siwei-row {
     margin-right: -390px;
@@ -205,6 +227,66 @@
     background: #495057;
 }
 
+/**
+ * 首页展示的咨询动态部分
+ */
+.news {
+    margin-bottom: 40px;
+}
+.news h3 {
+    padding: 86px 0 66px;
+    text-align: center;
+}
+.news ul {
+    width: 100%;
+    font-size: 14px;
+    color: #333333;
+}
+.news li {
+    float: left;
+    width: 30%;
+    margin: 0 20px;
+}
+.news li .more {
+    /*padding: 15px 0 40px;*/
+    cursor: default;
+    margin-top: 10px;
+}
+.news li h4 {
+    font-size: 16px;
+    font-weight: bold;
+    border-left: 3px solid #ff4600;
+    margin-bottom: 20px;
+    padding-left: 10px;
+}
+.news li .icon {
+    width: 80%;
+    height: 200px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.news li .icon img {
+    width: 283px;
+    height: 200px;
+}
+.news li .icon a {
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
+.news li li {
+    float: none;
+    width: 350px;
+    margin: 16px 0 0;
+    padding-right: 10px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    background: url("../images/smallroutine/icon3.png") -28px -23px no-repeat;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 /**
  * 品牌型网站页面样式部分
  */
@@ -311,9 +393,7 @@
     margin-bottom: 0;
     margin-left: 30%;
 }
-.gray-bg {
-    background: #f9f9f9;
-}
+
 
 .items-more-title {
     text-align: center;
@@ -448,4 +528,361 @@
     color: #0d0d0d;
 }
 
+/**
+ *小程序详细解决方案部分相关
+ */
+.sub {
+    font-size: 16px;
+    line-height: 65px;
+    color: #666;
+}
+.xiaochengxv-model {
+    text-align: center;
+    background: #F4F4F4;
+    padding-bottom: 38px;
+}
+.xiaochengxv-model ul {
+    padding-top: 50px;
+    display: -webkit-flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    width: 80%;
+    margin: 0 auto;
+}
+.xiaochengxv-model li {
+    width: 24%;
+    height: auto;
+    margin-bottom: 42px;
+    padding: 25px 0 25px 80px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    text-align: left;
+    background: #fff url("../images/smallroutine/i1.png") 20px center no-repeat;
+    cursor: pointer;
+    transition: all .3s ease;
+}
+.xiaochengxv-model li title {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+.xiaochengxv-model li p {
+    color: #888;
+}
 
+.xiaochengxv-model li:nth-child(1){
+    background-image: url("../images/smallroutine/i1.png");
+}
+.xiaochengxv-model li:nth-child(2){
+    background-image: url("../images/smallroutine/i2.png");
+}
+.xiaochengxv-model li:nth-child(3){
+    background-image: url("../images/smallroutine/i3.png");
+}
+.xiaochengxv-model li:nth-child(4){
+    background-image: url("../images/smallroutine/i4.png");
+}
+.xiaochengxv-model li:nth-child(5){
+    background-image: url("../images/smallroutine/i5.png");
+}
+.xiaochengxv-model li:nth-child(6){
+    background-image: url("../images/smallroutine/i6.png");
+}
+.xiaochengxv-model li:nth-child(7){
+    background-image: url("../images/smallroutine/i7.png");
+}
+.xiaochengxv-model li:nth-child(8){
+    background-image: url("../images/smallroutine/i8.png");
+}
+.xiaochengxv-model li:nth-child(9){
+    background-image: url("../images/smallroutine/i9.png");
+}
+.xiaochengxv-model li:nth-child(10){
+    background-image: url("../images/smallroutine/i10.png");
+}
+.xiaochengxv-model li:nth-child(11){
+    background-image: url("../images/smallroutine/i11.png");
+}
+.xiaochengxv-model li:nth-child(12){
+    background-image: url("../images/smallroutine/i12.png");
+}
+.xiaochengxv-y-background {
+    background-image: url("../images/smallroutine/bg2.png");
+}
+.xiaochengxv-y-background ul {
+    margin: 0 auto;
+    display: -webkit-flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    width: 80%;
+}
+.xiaochengxv-y-content li {
+    width: 18%;
+    height: 240px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    padding: 106px 28px 0;
+    box-sizing: border-box;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #fff url("../images/smallroutine/ad1.png") center 30px no-repeat;
+}
+
+.xiaochengxv-y-content li .title {
+    font-size: 18px;
+    line-height: 42px;
+}
+.xiaochengxv-y-content li p {
+    line-height: 26px;
+    text-align: left;
+    color: #888;
+}
+.xiaochengxv-y-content li:nth-child(1){
+    background-image: url("../images/smallroutine/ad1.png");
+}
+.xiaochengxv-y-content li:nth-child(2){
+    background-image: url("../images/smallroutine/ad2.png");
+}
+.xiaochengxv-y-content li:nth-child(3){
+    background-image: url("../images/smallroutine/ad3.png");
+}
+.xiaochengxv-y-content li:nth-child(4){
+    background-image: url("../images/smallroutine/ad4.png");
+}
+.xiaochengxv-y-content li:nth-child(5){
+    background-image: url("../images/smallroutine/ad5.png");
+}
+.xiaochengxv-y-content li:nth-child(6){
+    background-image: url("../images/smallroutine/ad6.png");
+}
+.xiaochengxv-y-content li:nth-child(7){
+    background-image: url("../images/smallroutine/ad7.png");
+}
+.xiaochengxv-y-content li:nth-child(8){
+    background-image: url("../images/smallroutine/ad8.png");
+}
+.xiaochengxv-y-content li:nth-child(9){
+    background-image: url("../images/smallroutine/ad9.png");
+}
+.xiaochengxv-y-content li:nth-child(10){
+    background-image: url("../images/smallroutine/ad10.png");
+}
+.xiaochengxv-customer {
+    background: #F4F4F4;
+}
+.xiaochengxv-customer .sub {
+    margin-bottom: 57px;
+    text-align: center;
+}
+.authorize_con {
+    width: 1200px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: block;
+    margin: 0 auto;
+}
+.authorize_con .con_left {
+    width: 300px;
+    height: 100%;
+    background: url("../images/smallroutine/bg3.png") center;
+    color: #fff;
+}
+.authorize_con .con_left .type {
+    width: 110px;
+    height: 110px;
+    margin: 40px auto;
+    border-radius: 50%;
+    background: url("../images/smallroutine/type_bg.jpg");
+    font-size: 30px;
+    text-align: center;
+    line-height: 110px;
+}
+.authorize_con .con_left .process {
+    margin-top: 50px;
+    padding: 0 0;
+
+}
+.authorize_con .con_left .process p {
+    margin-bottom: 18px;
+    font-weight: bold;
+    color: #fff;
+    
+}
+.authorize_con .con_left .process p.p1 {
+    font-size: 16px;
+}
+.authorize_con .con_right {
+    position: relative;
+    height: 100%;
+    width: 900px;
+    background: #fff url("../images/smallroutine/line.png") center 117px no-repeat;
+}
+.authorize_con .con_right .item {
+    position: absolute;
+    width: 128px;
+    height: 58px;
+    line-height: 58px;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+}
+.authorize_con .con_right .item1 {
+    top: 36px;
+    left: 336px;
+    width: 228px;
+    height: 68px;
+    line-height: 68px;
+    font-size: 26px;
+    background: url("../images/smallroutine/btn_bg2.png");
+}
+.authorize_con .con_right .item2 {
+    top: 199px;
+    left: 140px;
+    background: url("../images/smallroutine/btn_bg3.png");
+}
+.authorize_con .con_right .item3 {
+    top: 199px;
+    left: 370px;
+    background: url("../images/smallroutine/btn_bg4.png");
+}
+.authorize_con .con_right .item4 {
+    top: 199px;
+    left: 635px;
+    background: url("../images/smallroutine/btn_bg5.png");
+}
+.authorize_con .con_right .item_con {
+    position: absolute;
+    left: 0;
+    top: 80px;
+    width: 230px;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: left;
+    color: #666;
+}
+.entrance {
+    height: 500px;
+    text-align: center;
+}
+.entrance h3 {
+    padding: 63px 0 20px;
+}
+.entrance ul {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 52px;
+    list-style: none;
+}
+.entrance li {
+    margin-top: 0;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 280px;
+    height: 100px;
+    margin-bottom: 30px;
+    padding-left: 90px;
+    box-sizing: border-box;
+    border: 1px solid #dcdcdc;
+    border-radius: 10px;
+    text-align: left;
+    background: #fff url("../images/smallroutine/wx1.png") 25px center no-repeat;
+    transition: background-color 0.3s;
+}
+
+.entrance li p {
+    font-size: 16px;
+    line-height: 20px;
+    color: #666;
+}
+.entrance li:nth-child(1) {
+    background-image: url("../images/smallroutine/wx1.png");
+}
+.entrance li:nth-child(2) {
+    background-image: url("../images/smallroutine/wx2.png");
+}
+.entrance li:nth-child(3) {
+    background-image: url("../images/smallroutine/wx3.png");
+}
+.entrance li:nth-child(4) {
+    background-image: url("../images/smallroutine/wx4.png");
+}
+.entrance li:nth-child(5) {
+    background-image: url("../images/smallroutine/wx5.png");
+}
+.entrance li:nth-child(6) {
+    background-image: url("../images/smallroutine/wx6.png");
+}
+.entrance li:nth-child(7) {
+    background-image: url("../images/smallroutine/wx7.png");
+}
+.entrance li:nth-child(8) {
+    background-image: url("../images/smallroutine/wx8.png");
+}
+
+.trade {
+    height: 750px;
+    background: url("../images/smallroutine/bg4.png") center;
+    text-align: center;
+    color: #fff;
+}
+.trade h3 {
+    padding: 62px 0 120px;
+}
+.trade ul {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.trade li {
+    width: 20%;
+    height: 180px;
+    text-align: center;
+    margin: 0 auto;
+}
+.trade li .icon {
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+    margin: 0 auto;
+    background: #5cddb4 url("../images/smallroutine/trade1.png") center no-repeat;
+}
+.trade li p {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 20px;
+    color: #F4F4F4;
+}
+.trade li:nth-child(2) .icon {
+     background: #6abde0 url("../images/smallroutine/trade2.png") center no-repeat;
+}
+.trade li:nth-child(3) .icon {
+    background: #82b4ff url("../images/smallroutine/trade3.png") center no-repeat;
+}
+.trade li:nth-child(4) .icon {
+    background: #828eff url("../images/smallroutine/trade4.png") center no-repeat;
+}
+.trade li:nth-child(5) .icon {
+    background: #ba82ff url("../images/smallroutine/trade5.png") center no-repeat;
+}
+.trade li:nth-child(6) .icon {
+    background: #e682ff url("../images/smallroutine/trade6.png") center no-repeat;
+}
+.trade li:nth-child(7) .icon {
+    background: #ff82ce url("../images/smallroutine/trade7.png") center no-repeat;
+}
+.trade li:nth-child(8) .icon {
+    background: #ff6d88 url("../images/smallroutine/trade8.png") center no-repeat;
+}
+.trade li:nth-child(9) .icon {
+    background: #f7455d url("../images/smallroutine/trade9.png") center no-repeat;
+}
+.trade li:nth-child(10) .icon {
+     background: #ffa16d url("../images/smallroutine/trade10.png") center no-repeat;
+ }
